<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Bottom Navigation Menu -->
    <string name="title_home">Home</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_profile">Profile</string>

    <string name="lesson_number_format">%1$d. </string>

    <!-- fragment_student_home.xml -->
    <string name="learn_it_today">Learn it today</string>
    <string name="start_learning">Start Learning</string>
    <string name="initial_points">0</string>
    <string name="points_icon_description">Brick Icon</string>
    <string name="initial_course_gen">5</string>

    <!-- fragment_gallery.xml -->
    <string name="find_course_headline">Find a perfect course</string>
    <string name="course_generation_headline">Want something more personalized?</string>
    <string name="course_generation_short_text">Don Mattone could create the course just by your description</string>
    <string name="course_generation_button_text">Try It</string>
    <string name="recommended_headline">Our Courses</string>

    <!-- fragment_student_profile_courses.xml -->
    <string name="you_are_learning">You are learning</string>
    <string name="finished_courses">Finished Courses</string>
    <string name="generated_courses">Generated by you</string>

    <!-- fragment_student_profile_settings.xml -->
    <string name="your_interests">Your interests</string>
    <string name="daily_learning_time">Daily Learning Time:</string>

    <!-- activity_course_details.xml -->
    <string name="lessons">Lessons</string>
    <string name="enroll">Enroll</string>

    <!-- item_course.xml -->
    <string name="leave">Leave</string>

    <!-- course_overview_activity.xml -->
    <string name="course_lessons_format">%d Lessons</string>

    <!-- Finish Course Layout -->
    <string name="congratulations">Congratulations!</string>
    <string name="course_completion_message">You have successfully completed the course.</string>
    <string name="continue_button_text">Continue</string>
</resources>