<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/short_course_generation_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_view_50"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/course_generation_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_generation_headline"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:gravity="center" />

        <TextView
            android:id="@+id/course_generation_short_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/main_color"
            android:text="@string/course_generation_short_text"
            android:gravity="center" />

        <Button
            android:id="@+id/course_generation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/course_generation_button_text"
            app:backgroundTint="@color/maverkick_accent"
            app:cornerRadius="25dp" />
    </LinearLayout>

        <TextView
            android:id="@+id/generated_by_you_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generated_courses"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/short_course_generation_container"
            android:layout_marginTop="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/generatedCoursesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/generated_by_you_label"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            tools:listitem="@layout/item_course_overview"/>

        <TextView
            android:id="@+id/recommended_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/maverkick_white"
            android:textSize="24sp"
            android:text="@string/recommended_headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generatedCoursesList"
            android:layout_marginTop="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommended_courses_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/recommended_headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_course_overview"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>