<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_dialog_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Checkmark Icon -->
        <ImageView
            android:id="@+id/completionIcon"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/finished_course"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Congratulatory Message -->
        <TextView
            android:id="@+id/congratulatoryMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/congratulations"
            android:textColor="@color/maverkick_main"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/completionIcon" />

        <!-- Sub-message -->
        <TextView
            android:id="@+id/subMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/course_completion_message"
            android:textColor="@color/maverkick_black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/congratulatoryMessage" />

        <!-- Continue Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/continueButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/continue_button_text"
            app:backgroundTint="@color/maverkick_main"
            android:textColor="@color/maverkick_white"
            app:cornerRadius="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subMessage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
